crates/swc/tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es2015.1.normal/output.js
var A;
(function(A) {
    let B;
    (function(B) {
        class C {
        }
        B.C = C;
    })(B || (B = {
    }));
    A.B = B;
})(A || (A = {
}));
var M2;
(function(M2) {
    let X;
    (function(X) {
        var Point;
        X.Point = Point;
    })(X || (X = {
    }));
    M2.X = X;
})(M2 || (M2 = {
}));
